--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,7 +56,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #3104B4
+  background-color: #08088A
   }
 
 @media screen and (min-width: 64em) {
