--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -112,7 +112,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #8A0808; }
+  color: #08088A; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
